components/footer/footer.styles.css
footer{

  background-color: #333333;
  display: flex;
  justify-content: center;
  width: 100vw;
  margin-top: 10vh;
}

.footer-container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
   
    width: 80%;
    background-color: #333333;
    color: white;

    }
.left-footer{
  width: 50%;
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 10px;
 
}

.left-footer{
  width: 50%;
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 10px;
  justify-content: start;
  border-right: 2px solid rgba(182, 156, 156, 0.397);
  padding: 20px;

   & img{
    object-fit: contain;
    width: auto;
    height: 20px;
   }
}

.right-footer{
  width: 50%;
  display: flex;
  padding: 0 0 0 20px;
  align-items: center;
  justify-content: space-between;
  gap: 10px;

   & .left{
    width: 50%;
   }
}

.serv{
  & h2{
    font-size: 14px;
    font-weight: normal;
  }
  & p{
    font-size: 12px;
  }
}

@media only screen and (max-width: 500px) {
.footer-container{
  padding: 30px 0px;
  width: 95%;
}

}

